static/css/themes/mundana.css
/* MUNDANA THEME

Generic classes for all world children
*/

@font-face {
  font-family: 'Vinque';
  src: url('../../../static/fonts/vinque.ttf');
}

@font-face {
  font-family: 'Goudy';
  src: url('../../../static/fonts/GoudyBookletter1911.otf');
}

@font-face {
  font-family: 'PrinceValiant';
  src: url('../../../static/fonts/prince-valiant.ttf');
}

/* needs !important to overwrite other css classes */
body {
  font-family: Goudy;
  font-size: 18px;
  background: #f6f5ee url("../../../static/img/noise-light.png") !important;
}

body a {
  text-decoration: none;
  color: #8f0011;
  font-weight: bold;
}

.well {
  background-color: #bda362;
  border: 1px solid black;
  color: #8f0011;
}

/* needs !important to overwrite other css classes */
.content {
  background: none !important;
}

.worldSideBar {
  background: url('../../../static/img/goat.png');
  background-position: top;
  background-repeat: no-repeat;
  background-size: 75%;
}

.worldSideBar > ul {
  padding: 120px 0 0 20px;
}

.worldSideBar li a {
    text-decoration: none;
    color: #8f0011;
    font-weight: normal;
}

.worldSideBar li a:hover {
  background: #bda362;
  
}

/* World Title */
.content .page-header h1 {
  font-family: Vinque;
  color: #8f0011;
}

.content .page-header {
  border-bottom: 1px solid black;
}

.pagination a {
  color: #8f0011 !important;
}

.pagination li > a {
  border: 0;
  background-color: #bda362;
}

.pagination li > a:hover {
  background-color: #8f0011;
  color: white !important;
}

.pagination li.disabled > a {
  background-color: #bda362;
}

.pagination li.disabled > a:hover {
  background-color: #bda362;
  color: #8f0011 !important;
}

.pagination li.active > a {
  background-color: #8f0011;
  color: white !important;
}

.pagination li.active > a:hover {
  background-color: #8f0011;
  color: white !important;
}

/* Browse Articles - article_list.html
---------------------------------------------
*/

/* Browse Article Title */
.content .browseArticle {

}

.panel {
  background: #bda362 !important;
  border: 1px solid black;
  padding: 0 0 0 10px;
}

/* Browse Tabs container*/
.content .content-menu {
  border: 0;
}

.content .content-menu li a:hover {
  color: white;
  background: #8f0011;
  border: 1px solid black;
  border-bottom: 0;
}

.content .content-menu li.active > a {
  background: #bda362 !important;
  border: 1px solid black;
  border-bottom: 0;
  color: #8f0011;
}

/* Browse Article container */
.content .worldBrowse {

}

/* Browse Article Links */
.content .worldBrowse a {

}

.content .content-menu li .active

/* World Article - article_item.html
-------------------------------
*/

/* World Article Title */
.content .article_header h2 {

}

.content .article_header h2 small {

}

/*
World Item - world_item.html
-----------------------------------------
*/

/* container for articles */
.worldArticles {

}

.worldArticles ul {

}

.worldArticles li {

}

.worldArticles li a {

}

/* Type of article */
.worldArticles li span {

}

.worldDesc {

}

.imgAside {

}

.imgAside img {

}

/* End world_item.html */

